--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,16 +28,12 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.myhexaville:smart-image-picker:1.0'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.5'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.android.support:design:26.+'
     testCompile 'junit:junit:4.12'
 }
-
-
-
-
-
-
-
 
 
 apply plugin: 'com.google.gms.google-services'
