--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.android.support:design:26.+'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.github.shalskar:PeekAndPop:1.1.0'
     testCompile 'junit:junit:4.12'
 }
 
